fix hero section spacing

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ nav ul li a.active{
 
 .hero-text{
     max-width:650px;
-    margin-top: -100px;
+    margin-top: 30px;
 }
 
 .hero-text h1{
